# calcPi

./: .gitignore  CMakeLists.txt  README.md  calcPi.cpp
CMakeModules/: FindGMP.cmake
